# mjson

./: .gitignore  ChangeLog  Makefile.in  README.md  aclocal.m4  configure  configure.ac  configure.in
.circleci/: config.yml
.github/workflows/: c-cpp.yml
src/: .indent.pro  Makefile.am  Makefile.in  json.c  json.h  json_helper.c  json_helper.h
tests/: Makefile.am  Makefile.in  check_mjson.c
